--- a/styles/pages/amazon.css
+++ b/styles/pages/amazon.css
@@ -125,7 +125,9 @@
 .product-quantity-container {
   margin-bottom: 17px;
 }
-
+.product-container:hover{
+  transform: translateY(-5px);
+}
 .product-spacer {
   flex: 1;
 }
