--- a/styles/pages/orders.css
+++ b/styles/pages/orders.css
@@ -185,6 +185,7 @@
   .product-image-container {
     text-align: center;
     margin-bottom: 25px;
+    transition: translate(-5,ease);
   }
 
   .product-image-container img {
