--- a/styles/pages/tracking.css
+++ b/styles/pages/tracking.css
@@ -45,6 +45,10 @@
 
 .current-status {
   color: rgb(6, 125, 98);
+  transition: height 0.5s ease;
+}
+.current-status:hover::before {
+            height: 100%;
 }
 
 @media (max-width: 575px) {
@@ -64,14 +68,6 @@
   }
 }
 
-.progress-bar-container {
-  height: 25px;
-  width: 100%;
-
-  border: 1px solid rgb(200, 200, 200);
-  border-radius: 50px;
-  overflow: hidden;
-}
 
 .progress-bar {
   height: 100%;
@@ -79,3 +75,28 @@
   border-radius: 50px;
   width: 50%;
 }
+
+ .progress-bar-container {
+            position: relative;
+            width: 100%;
+            height: 20px;
+            overflow: hidden;
+        }
+
+        .progress-bar-container img {
+            width: 100%;
+            height: 100%;
+            display: block;
+        }
+
+        .progress-bar-container::before {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 0;
+            background-color: green;
+            border-radius: 50px;
+            z-index: 1;
+        }
