--- a/styles/shared/general.css
+++ b/styles/shared/general.css
@@ -36,6 +36,7 @@ input, select, button {
 .button-primary:hover {
   background-color: rgb(247, 202, 0);
   border: 1px solid rgb(242, 194, 0);
+  transform: translateY(-5px);
 }
 
 .button-primary:active {
@@ -55,6 +56,7 @@ input, select, button {
 
 .button-secondary:hover {
   background-color: rgb(247, 250, 250);
+  transform: translateY(-5px);
 }
 
 .button-secondary:active {
