--- a/styles/shared/amazon-header.css
+++ b/styles/shared/amazon-header.css
@@ -13,6 +13,7 @@
   left: 0;
   right: 0;
   height: 60px;
+  z-index: 10;
 }
 
 .amazon-header-left-section {
@@ -82,7 +83,7 @@
 }
 
 .search-button {
-  background-color: rgb(254, 189, 105);
+  background-color: rgba(171, 197, 194, 0.648);
   border: none;
   width: 45px;
   height: 40px;
