--- a/styles/pages/amazon.css
+++ b/styles/pages/amazon.css
@@ -70,7 +70,7 @@
   padding-bottom: 25px;
   padding-left: 25px;
   padding-right: 25px;
-
+  background-color: aqua;
   border-right: 1px solid rgb(231, 231, 231);
   border-bottom: 1px solid rgb(231, 231, 231);
 
