--- a/styles/pages/checkout/checkout-header.css
+++ b/styles/pages/checkout/checkout-header.css
@@ -1,8 +1,8 @@
 .checkout-header {
-  height: 60px;
+  height: 65px;
   padding-left: 30px;
   padding-right: 30px;
-  background-color: white;
+  background-color: grey;
 
   display: flex;
   justify-content: center;
