--- a/styles/pages/tracking.css
+++ b/styles/pages/tracking.css
@@ -11,6 +11,7 @@
      without needing a container. */
   margin-left: auto;
   margin-right: auto;
+  background-color: aqua;
 }
 
 .back-to-orders-link {
